fix navbar height on mobile

--- a/styles.css
+++ b/styles.css
@@ -564,7 +564,7 @@ footer > nav {
 	.navbar{
 		flex-direction: column;
 		align-items: flex-start;
-		height: 60px;
+		min-height: 60px;
 	}
 
 	.toggle-button{
